[project]
name = "userapi"
version = "0.1.0"
description = "Simple Mongodb api to try out mongo configurations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "motor>=3.7.0",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
